More towards APSA 2015 confernece

--- a/escrito/urge01urbana.tex
+++ b/escrito/urge01urbana.tex
@@ -30,7 +30,7 @@
 
 \begin{document}
 
-\title{Congress skips its turn, again: \\ Agenda obstruction in Chile's Congress\thanks{The author is grateful to José Antonio Cheibub, Gisela Sin, and participants at the Comparative Politics Workshop of the University of Illinois at Urbana-Champaign for useful comments and critiques; to the Department of Political Science at Washington University in St.\ Louis, where much of this work was done as visiting scholar; and acknowledges financial support from the Asociaci\'on Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. The author bears sole responsibility for mistakes and shortcomings in the paper.}}
+\title{Congress skips its turn, again: \\ Agenda obstruction in Chile's Congress\thanks{Paper presented at the Comparative Politics Workshop of the University of Illinois at Urbana-Champaign, Feb.~9, 2015. I am grateful to the Department of Political Science at Washington University in St.\ Louis, where I did much of this work as visiting scholar. I also acknowledge financial support from the Asociaci\'on Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. The author bears sole responsibility for mistakes and shortcomings in the paper.}}
 \author{Eric Magar \\ ITAM }
 \date{\today}
 \maketitle
@@ -43,17 +43,17 @@
 
 \onehalfspacing
 
-The book has sought to show that the generic, often tacit, and quite ubiquitous model of politics in presidential systems is too simple. That model portrays a president and Congress with shared policy-making power as engaged in an ultimatum game. That one side proposes something that the other accepts or rejects is, indeed, a fundamental trait of the system. But, leaving other important elements aside, the model has lead to a dichomotomous view of gridlock/not that has been inimical to an understanding of decision-making in separation of power systems in comparative politics.
+The book has sought to show that the generic, often tacit, and quite ubiquitous model of politics presidential systems is too simple. That model portrays a president and Congress with shared policy-making power as engaged in an ultimatum game. That one side proposes something that the other accepts or rejects is, indeed, a fundamental trait of the system. But, leaving other important elements aside, the model has lead to a dichomotomous view of gridlock/not that has been inimical to an understanding of decision-making in separation of power systems in comparative politics.
 
 Previous chapters highlight elements that interact in decision-making with the branches' mutual veto. Adding ``minor'' institutional detail (Can vetoes be overridden? Can anyone move unilaterally?), motivation (Are politicians policy-oriented only? Does it matter?), or strategic considerations (Why move if you anticipate a rejection?) greatly sharpens the model's explanatory power. 
 
 %In a world of expanded government responsibilities, ``the need for coordinated and coherent programs, legislative as well as administrative, has become paramount'' \citep[][:4]{apsa.1950}. 
 
-This chapter continues the exploration of unilateralism in presidential systems with an inspection of the urgency authority. Five Latin American constitutions give the executive power to interfere, to some degree, with the assembly's voting schedule. The urgency authority varies considerably \citep[][:437]{morgenstern.2002b}. In Brazil, the assembly must act on a bill deemed urgent withing 45 days, or else it takes precedence over all other legislative business. All executive unilateral policy (\emph{medidas provis\'orias}) become urgent upon publication since 2001. In Colombia, an urgent bill goes to the top of the voting schedule immediately. In Uruguay and Chile, legislators must act withing a pre-specified, short period; failure to do so converts the urgent bill into law in Uruguay. In Chile the consequences of inaction are indetermined. And in Mexico since 2012, the president can declare urgent up to four bills every year, which must be scheduled for a floor vote within 30 days. 
+This chapter continues the exploration of unilateralism in presidential systems with an inspection of the urgency authority. Five Latin American constitutions give the executive power to interfere, to some degree, with the legislative agenda. The urgency authority varies considerably \citep[][:437]{morgenstern.2002b}. In Brazil, the assembly must act on a bill deemed urgent withing 45 days, or else it takes precedence over other legislative business. In Colombia, an urgent bill takes precedence immediately. In Uruguay and Chile, legislators must act withing a pre-specified, short period; failure to do so converts the urgent bill into law in Uruguay. In Chile the consequences of inaction remain unclear. And in Mexico since 2012, the president can declare urgent up to four bills every year, which must be scheduled for a floor vote within 30 days. 
 
-Interfering with the legislative schedule does not end policy differences between the branches per se, and the urgency authority confronts a paradox. Can it convey influence in the legislative arena? Given an urgency, a recalcitrant assembly will simply stop the president's proposal sooner then it would have done. But at least two differences become plainly evident: the timing, whatever had been prioritized by assembly leadership is inevitably pulled down in the schedule by executive fiat; and the action, as legislators will be forced to explicitly bring down the proposal, instead of letting it stand (perhaps indefinitley). Such difference, this chapter aims to show, may put pressure on the legislature and therefore serve as an alternative form of negotiation. This opens up new facets in executive-legislative negotiation. 
+Interfering with the legislative agenda does not end gridlock per se, and the urgency authority confronts a paradox. Can it convey influence in the legislative arena? Given an urgency, a recalcitrant assembly will simply stop the president's proposal sooner then it would have done. But, this chapter aims to show, it also does this negative action differently, and such difference may put pressure on the legislature. This opens up new facets in executive-legislative negotiation. 
 
-The paper offers a preliminary inspection of the urgency authority and its use in Chile since 1998. Section 1 reviews the formal institution and twin studies that have inspected some of its consequences. Section 2 offers sketches that could help produce a theory of the urgency authority. Two elements are highlighted, how the urgency changes the salience of policy and the visibility of rejecting it, and how legislators' impatience might be exploited by the executive. Section 3 describes an original dataset of bill histories and urgency messages in Chile in the 1998--2014 period. The description of  bill initiation, bill passage, and urgency use produce patterns that open a set of questions that could/should be addressed by a systematic study of unilateralism in Chile. Section 4 pays attention to committee reporting, one step of the process that should be influenced by urgency messages that can be measured with the data. The section confirms that, despite institutional ambiguity, the urgency authority makes an imprint in the legislative process. Section 6 carries a very preliminary study of some determinants of urgency authority use in the period. There is no conclusion, but comments and critiques are very welcome to help me push this investigation to the next level. 
+The paper offers a preliminary inspection of the urgency authority and its use in Chile since 1998. Section 1 reviews the formal institution and twin studies that have studied some of its consequences in the legislative process. Section 2 offers sketches that could help produce a theory of the urgency authority. Two elements are highlighted, how the urgency changes the salience of policy and the visibility of rejecting it, and how legislators' impatience might be exploited by the executive. Section 3 describes an original dataset of bill histories and urgency messages in Chile in the 1998--2014 period. The description of  bill initiation, bill passage, and urgency use produce patterns that open a set of questions that could/should be addressed by a systematic study of unilateralism in Chile. Section 4 pays attention to committee reporting, one step of the process that should be influenced by urgency messages that can be measured with the data. The section confirms that, despite institutional ambiguity, the urgency authority makes an imprint in legislative process. Section 6 carries a very preliminary study of some determinants of urgency authority use in the period. There is no conclusion, but comments and critiques are very welcome to help me push this investigation to the next level. 
 
 
 \section{The urgency authority}
@@ -280,13 +280,13 @@ introduced               &        5,533  &       1,469  &     7,002  \\
 as \%                    &    \emph{79}  &   \emph{21}  & \emph{100} \\ \hdashline
 passed                   &          404  &       1,067  &     1,471  \\
 as \%                    &    \emph{27}  &   \emph{73}  & \emph{100} \\
-as \% of introduced      &     \emph{7}  &   \emph{73}  &  \emph{21} \\ \hdashline
+as \% introduced         &     \emph{7}  &   \emph{73}  &  \emph{21} \\ \hdashline
 declared urgent          &          351  &       1,016  &     1,367  \\
 as \%                    &    \emph{26}  &   \emph{74}  & \emph{100} \\
-as \% of introduced      &     \emph{6}  &   \emph{69}  &  \emph{20} \\ \hdashline
+as \% introduced         &     \emph{6}  &   \emph{69}  &  \emph{20} \\ \hdashline
 declared urgent \& passed&          167  &         762  &       929  \\
 as \%                    &    \emph{18}  &   \emph{82}  & \emph{100} \\
-as \% of declared urgent &    \emph{48}  &   \emph{75}  &  \emph{68} \\ \hline
+as \% declared urgent    &    \emph{48}  &   \emph{75}  &  \emph{68} \\ \hline
 \end{tabular}
 \caption{Bills, laws, and those declared urgent 1998--2014}\label{T:billDescriptives}
 \end{table}
@@ -341,40 +341,10 @@ More interesting patterns in urgency authority usage are discernible in bill his
 \end{table}
 
 
-**********************
-
-% Many retiros actually occurred after deadline... meaning?
-
-% \begin{tabular}{lrrrrrrrrr}
-%                        &  1 AN  & 2 2wk & 3 4wk & ext.1 & ext.2 & ext.3 & ret.1 & ret.2 & ret.3 \\
-% Retired after deadline &  102 & 308 & 217 &  93 & 560 & 203 &   0 &   0 &   0 \\
-% Not                    &  525 &2039 &2255 & 289 &2790 &2174 & 266 &1443 &1406 \\
-% \end{tabular}
-
-% *********************
-
-Vote occurred within deadline
-
-\begin{tabular}{lrr}
-                           & \% vote w/i deadline  & N \\
-Act now                    &    48                 & 25 \\
-Act now--extended          &    50                 & 4  \\
-Act now--extended--retired &    29                 & 7  \\
-Act now--retired           &    100                & 4  \\
-2wk                        &    8                  & 370\\
-2wk--extended              &    21                 & 39 \\
-2wk--extended--retired     &    22                 & 109\\
-2wk--retired               &    89                 & 27 \\
-4wk                        &    4                  & 272\\
-4wk--extended              &    22                 & 36 \\
-4wk--extended--retired     &    16                 & 138\\
-4wk--retired               &    29                 & 17 \\
-\end{tabular} 
-
-*********************
-
-
 Reiterating a message could be due to non-compliance: in light of congressional inaction on an urgent bill, the executive sends the message again, perhaps over and over again. The contents of many messages can be downloaded as separate files from the web, but this remains a route for future work. Yet an inspection of the types of messages observed in the period suggests otherwise. 
+
+
+
 
 
 \begin{table}
